[package]
name = "zahl"
version = "0.1.0"
authors = ["Matthieu M. <matthieum.147192@gmail.com>"]
edition = "2024"
description = "Pragmatic type-level integers"
repository = "https://github.com/matthieu-m/zahl"
license = "MIT OR Apache-2.0"
keywords = ["experimental", "type"]
categories = ["no-std", "science"]

[features]

default = ["add-4-6", "neg-4-6", "sub-4-6"]

add-1-3 = []
add-4-6 = ["add-1-3"]
add-7-9 = ["add-4-6"]
add-10-12 = ["add-7-9"]
add-13-15 = ["add-10-12"]
add-16-18 = ["add-13-15"]
add-19-21 = ["add-16-18"]
add-22-24 = ["add-19-21"]
div-1-3 = []
div-4-6 = ["div-1-3"]
div-7-9 = ["div-4-6"]
div-10-12 = ["div-7-9"]
div-13-15 = ["div-10-12"]
div-16-18 = ["div-13-15"]
div-19-21 = ["div-16-18"]
div-22-24 = ["div-19-21"]
mul-1-3 = []
mul-4-6 = ["mul-1-3"]
mul-7-9 = ["mul-4-6"]
mul-10-12 = ["mul-7-9"]
mul-13-15 = ["mul-10-12"]
mul-16-18 = ["mul-13-15"]
mul-19-21 = ["mul-16-18"]
mul-22-24 = ["mul-19-21"]
neg-1-3 = []
neg-4-6 = ["neg-1-3"]
neg-7-9 = ["neg-4-6"]
neg-10-12 = ["neg-7-9"]
neg-13-15 = ["neg-10-12"]
neg-16-18 = ["neg-13-15"]
neg-19-21 = ["neg-16-18"]
neg-22-24 = ["neg-19-21"]
rem-1-3 = []
rem-4-6 = ["rem-1-3"]
rem-7-9 = ["rem-4-6"]
rem-10-12 = ["rem-7-9"]
rem-13-15 = ["rem-10-12"]
rem-16-18 = ["rem-13-15"]
rem-19-21 = ["rem-16-18"]
rem-22-24 = ["rem-19-21"]
sub-1-3 = []
sub-4-6 = ["sub-1-3"]
sub-7-9 = ["sub-4-6"]
sub-10-12 = ["sub-7-9"]
sub-13-15 = ["sub-10-12"]
sub-16-18 = ["sub-13-15"]
sub-19-21 = ["sub-16-18"]
sub-22-24 = ["sub-19-21"]
