[package]
name = "zahl"
version = "0.1.0"
authors = ["Matthieu M. <matthieum.147192@gmail.com>"]
edition = "2024"
description = "Pragmatic type-level integers"
repository = "https://github.com/matthieu-m/zahl"
license = "MIT OR Apache-2.0"
keywords = ["experimental", "type"]
categories = ["no-std", "science"]

[features]

#   Z itself is useless without the actual trait implementations.
#
#   The features are named in two parts: the operation (trait name) and the maximum range of N in Z<N> for which the
#   trait is implemented. For example `add-6` means that the `Add` trait is implemented for all integers in -6..=6.

default = ["add-6", "neg-6", "sub-6"]

add-3 = []
add-6 = ["add-3"]
add-9 = ["add-6"]
add-12 = ["add-9"]
add-15 = ["add-12"]
add-18 = ["add-15"]
add-21 = ["add-18"]
add-24 = ["add-21"]
add-27 = ["add-24"]
add-30 = ["add-27"]
add-33 = ["add-30"]
add-36 = ["add-33"]
div-3 = []
div-6 = ["div-3"]
div-9 = ["div-6"]
div-12 = ["div-9"]
div-15 = ["div-12"]
div-18 = ["div-15"]
div-21 = ["div-18"]
div-24 = ["div-21"]
div-27 = ["div-24"]
div-30 = ["div-27"]
div-33 = ["div-30"]
div-36 = ["div-33"]
mul-3 = []
mul-6 = ["mul-3"]
mul-9 = ["mul-6"]
mul-12 = ["mul-9"]
mul-15 = ["mul-12"]
mul-18 = ["mul-15"]
mul-21 = ["mul-18"]
mul-24 = ["mul-21"]
mul-27 = ["mul-24"]
mul-30 = ["mul-27"]
mul-33 = ["mul-30"]
mul-36 = ["mul-33"]
neg-3 = []
neg-6 = ["neg-3"]
neg-9 = ["neg-6"]
neg-12 = ["neg-9"]
neg-15 = ["neg-12"]
neg-18 = ["neg-15"]
neg-21 = ["neg-18"]
neg-24 = ["neg-21"]
neg-27 = ["neg-24"]
neg-30 = ["neg-27"]
neg-33 = ["neg-30"]
neg-36 = ["neg-33"]
rem-3 = []
rem-6 = ["rem-3"]
rem-9 = ["rem-6"]
rem-12 = ["rem-9"]
rem-15 = ["rem-12"]
rem-18 = ["rem-15"]
rem-21 = ["rem-18"]
rem-24 = ["rem-21"]
rem-27 = ["rem-24"]
rem-30 = ["rem-27"]
rem-33 = ["rem-30"]
rem-36 = ["rem-33"]
sub-3 = []
sub-6 = ["sub-3"]
sub-9 = ["sub-6"]
sub-12 = ["sub-9"]
sub-15 = ["sub-12"]
sub-18 = ["sub-15"]
sub-21 = ["sub-18"]
sub-24 = ["sub-21"]
sub-27 = ["sub-24"]
sub-30 = ["sub-27"]
sub-33 = ["sub-30"]
sub-36 = ["sub-33"]
