[package]
name = "zahl"
version = "0.1.0"
authors = ["Matthieu M. <matthieum.147192@gmail.com>"]
edition = "2024"
description = "Pragmatic type-level integers"
repository = "https://github.com/matthieu-m/zahl"
license = "MIT OR Apache-2.0"
keywords = ["experimental", "type"]
categories = ["no-std", "science"]

[features]

#   Z itself is useless without the actual trait implementations.
#
#   The features are named in two parts: the operation (trait name) and the maximum range of N in Z<N> for which the
#   trait is implemented. For example `add-6` means that the `Add` trait is implemented for all integers in -6..=6.

default = ["add-6", "neg-6", "sub-6"]

add-3 = []
add-6 = ["add-3"]
add-9 = ["add-6"]
add-12 = ["add-9"]
add-15 = ["add-12"]
add-18 = ["add-15"]
add-21 = ["add-18"]
add-24 = ["add-21"]
add-27 = ["add-24"]
add-30 = ["add-27"]
add-33 = ["add-30"]
add-36 = ["add-33"]
add-39 = ["add-36"]
add-42 = ["add-39"]
add-45 = ["add-42"]
add-48 = ["add-45"]
div-3 = []
div-6 = ["div-3"]
div-9 = ["div-6"]
div-12 = ["div-9"]
div-15 = ["div-12"]
div-18 = ["div-15"]
div-21 = ["div-18"]
div-24 = ["div-21"]
div-27 = ["div-24"]
div-30 = ["div-27"]
div-33 = ["div-30"]
div-36 = ["div-33"]
div-39 = ["div-36"]
div-42 = ["div-39"]
div-45 = ["div-42"]
div-48 = ["div-45"]
mul-3 = []
mul-6 = ["mul-3"]
mul-9 = ["mul-6"]
mul-12 = ["mul-9"]
mul-15 = ["mul-12"]
mul-18 = ["mul-15"]
mul-21 = ["mul-18"]
mul-24 = ["mul-21"]
mul-27 = ["mul-24"]
mul-30 = ["mul-27"]
mul-33 = ["mul-30"]
mul-36 = ["mul-33"]
mul-39 = ["mul-36"]
mul-42 = ["mul-39"]
mul-45 = ["mul-42"]
mul-48 = ["mul-45"]
neg-3 = []
neg-6 = ["neg-3"]
neg-9 = ["neg-6"]
neg-12 = ["neg-9"]
neg-15 = ["neg-12"]
neg-18 = ["neg-15"]
neg-21 = ["neg-18"]
neg-24 = ["neg-21"]
neg-27 = ["neg-24"]
neg-30 = ["neg-27"]
neg-33 = ["neg-30"]
neg-36 = ["neg-33"]
neg-39 = ["neg-36"]
neg-42 = ["neg-39"]
neg-45 = ["neg-42"]
neg-48 = ["neg-45"]
pow-3 = []
pow-6 = ["pow-3"]
pow-9 = ["pow-6"]
pow-12 = ["pow-9"]
pow-15 = ["pow-12"]
pow-18 = ["pow-15"]
pow-21 = ["pow-18"]
pow-24 = ["pow-21"]
pow-27 = ["pow-24"]
pow-30 = ["pow-27"]
pow-33 = ["pow-30"]
pow-36 = ["pow-33"]
pow-39 = ["pow-36"]
pow-42 = ["pow-39"]
pow-45 = ["pow-42"]
pow-48 = ["pow-45"]
rem-3 = []
rem-6 = ["rem-3"]
rem-9 = ["rem-6"]
rem-12 = ["rem-9"]
rem-15 = ["rem-12"]
rem-18 = ["rem-15"]
rem-21 = ["rem-18"]
rem-24 = ["rem-21"]
rem-27 = ["rem-24"]
rem-30 = ["rem-27"]
rem-33 = ["rem-30"]
rem-36 = ["rem-33"]
rem-39 = ["rem-36"]
rem-42 = ["rem-39"]
rem-45 = ["rem-42"]
rem-48 = ["rem-45"]
root-3 = []
root-6 = ["root-3"]
root-9 = ["root-6"]
root-12 = ["root-9"]
root-15 = ["root-12"]
root-18 = ["root-15"]
root-21 = ["root-18"]
root-24 = ["root-21"]
root-27 = ["root-24"]
root-30 = ["root-27"]
root-33 = ["root-30"]
root-36 = ["root-33"]
root-39 = ["root-36"]
root-42 = ["root-39"]
root-45 = ["root-42"]
root-48 = ["root-45"]
sub-3 = []
sub-6 = ["sub-3"]
sub-9 = ["sub-6"]
sub-12 = ["sub-9"]
sub-15 = ["sub-12"]
sub-18 = ["sub-15"]
sub-21 = ["sub-18"]
sub-24 = ["sub-21"]
sub-27 = ["sub-24"]
sub-30 = ["sub-27"]
sub-33 = ["sub-30"]
sub-36 = ["sub-33"]
sub-39 = ["sub-36"]
sub-42 = ["sub-39"]
sub-45 = ["sub-42"]
sub-48 = ["sub-45"]
